# cppposit

./: .gitignore  .hdoc.toml  BUILD  CMakeLists.txt  LICENSE  README.md  docBackends.html  docExamples.html  docTabulation.html  docgetting_started.html  e392E86F46AEA7B41.html  e8305122EDE891945.html  eBD1057BCBF320133.html  enums.html  f0137B05D25492401.html  f1039DD0DD33B8CB3.html  f12D007190446C758.html  f1403EE8B08F6DB67.html  f24052440C75E1AD6.html  f25A95737EBC130A7.html  f26F36D16FA1801A4.html  f28B7A6CDF9720CA5.html  f2CE693F420E0FBBB.html  f3017D418E3EE7259.html  f3066D2CCD157DF60.html  f32FF66E271595512.html  f35474644C35AFED0.html  f4BABCF5A2786502F.html  f4F1443E87D5EC881.html  f59CC888563C7844F.html  f5BEF029CE1C127D2.html  f5D40B8DE392F3A63.html  f5FB6C45A8BC49998.html  f600D5DE4C761C153.html  f62F49DDA50706820.html  f63D5C311E6B860A8.html  f6F3182AE8EDE1382.html  f7234E74D4FD4A0F9.html  f736F2030345701E4.html  f79F8F36B9151273F.html  (+77 more)
.github/workflows/: cmake.yml  codecov.yml
docs/: Backends.md  Examples.md  Tabulation.md  getting_started.md
examples/: 01_basic.cpp  CMakeLists.txt  README.md
examples/01_basic/: 01_basic.cpp  README.md
examples/02_deepinit/: 02_deepinit.cpp
examples/03_stl/: 03_stl.cpp
examples/04_eigen/: 04_eigen.cpp  README.md
examples/05_fft/: 05_fft.cpp
examples/05_tabulatedposit/: 05_tabulatedposit.cpp  README.md
examples/06_logging/: 06_logging.cpp
examples/06_pseudosig/: 06_pseudosig.cpp  06_pseudosig_tab.cpp.bak  README.md
examples/07_pseudotanh/: 07_pseudotanh.cpp
examples/08_fused/: 08_fused.cpp
examples/09_tabulated/: 09_tabulated.cpp  CMakeLists.txt  ptab4_0.h
examples/98_backendhw/: 98_backendhw.cpp
examples/99_debugger/: 99_debugger.cpp
experimental/: analyzer.hpp  backend_fixed.hpp  binary8.hpp  positmul.hpp  simdposit.hpp  sqrt.hpp
experimental/vector/: posit_rvv.h  posit_rvv8.h  posit_rvv_common.h  posit_rvv_types.h  posit_sve.h  posit_sve_types.h  posit_vect.h  rv_posit_quickins.h
include/: anyfloat.hpp  bithippop.hpp  cposit.h  floattraits.hpp  posit.h  posit_logtab.hpp  posit_tab.hpp  positeigen.h  softback.hpp  typehelpers.hpp
include/backends/: fixed.hpp  float.hpp  hwbaseback.hpp  softback.hpp  tabback.hpp  unpacked.hpp  xpositback.hpp
include/floats/: softfloat.hpp
include/interface/cereal/: bf16.h  posit.h
include/interface/logger/: logger.hpp
include/interface/std/: std.hpp
include/traits/: fixedtraits.hpp  posittraits.hpp
scripts/: generatePositCppTables.py
src/: cposit.cpp  main.cpp  posit10.cpp  posit10_gen.cpp  posit12.cpp  posit12_gen.cpp  posit14.cpp  posit14_gen.cpp  posit8.cpp  posit8_gen.cpp  posit8_logtab_gen.cpp  posit_logtab_gen.cpp
tests/: CMakeLists.txt  act_vs_conv.cpp  ctor_conv_test.cpp  elu_data.cpp  execute_vect_test.sh  itest_dot.cpp  itest_elu.cpp  itest_inver.cpp  itest_plotcomp1.cpp  itest_plotrshift.cpp  itest_plotsig.cpp  itest_printbits.cpp  itest_pseudo.cpp  itest_reciprocate.cpp  itest_rvv.cpp  itest_shand_v.cpp  itest_vectorization.s  itest_vectorization_fun.cpp  minimal.cpp  tab_vs_L1.cpp  test_coverage.cpp  test_cposit.c  test_fixed.cpp  test_init.cpp  test_posit8_0tab.cpp  test_subnormals.cpp  testunpacked.cpp
tests/vect_test_pack/: exec.sh  main.cpp  vconv.h  vdot.h  velu.h  vgemm.h  vsig.h  vtanh.h
