add_custom_target(examples)

MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

#list(APPEND TAB_POSIT_LIB8 ${CMAKE_SOURCE_DIR}/src/posit8_tbl.cpp ${CMAKE_SOURCE_DIR}/src/posit8.cpp)
#list(APPEND TAB_POSIT_LIB12 ${CMAKE_SOURCE_DIR}/src/posit12_tbl.cpp ${CMAKE_SOURCE_DIR}/src/posit12.cpp)
#list(APPEND TAB_POSIT_LIB10 ${CMAKE_SOURCE_DIR}/src/posit10_tbl.cpp ${CMAKE_SOURCE_DIR}/src/posit10.cpp)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
FOREACH(subdir ${SUBDIRS})
  add_executable(example_${subdir} ${subdir}/${subdir}.cpp)
  target_compile_definitions(example_${subdir} PRIVATE POSIT_VALUE_LOGGER POSIT) 
  list(APPEND example_targets example_${subdir})
ENDFOREACH()
add_dependencies(examples ${example_targets})
